--- a/GroupMeClientAvalonia/Views/ChatsView.xaml
+++ b/GroupMeClientAvalonia/Views/ChatsView.xaml
@@ -6,6 +6,7 @@
              xmlns:converters="clr-namespace:GroupMeClientAvalonia.Converters"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+             xmlns:iconPack="clr-namespace:MicroCubeAvalonia.IconPack;assembly=MicroCubeAvalonia"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="GroupMeClientAvalonia.Views.ChatsView">
 
@@ -93,24 +94,25 @@
                       Width="35" Height="35"
                       Classes="RoundedMenu"
                       BorderThickness="0"
+                      Foreground="{DynamicResource DividerLineBrush}"
                       HorizontalAlignment="Left"
                       x:Name="toggleSearchBox"
                       IsVisible="{Binding #toggleMiniSidebar.IsChecked, Converter={StaticResource inverseBoolConverter}}"
                       Command="{Binding SearchToggled}"
                       CommandParameter="{Binding Path=IsChecked, RelativeSource={RelativeSource Self}}">
-            <DrawingPresenter Width="15" Height="15" Drawing="{DynamicResource Material.Magnify}" />
+          <iconPack:IconControl Width="15" Height="15" Kind="PackIconMaterialKind.Magnify" />
         </ToggleButton>
 
         <Button Grid.Column="3"
                 Width="35" Height="35"
                 Classes="RoundedMenu"
                 BorderThickness="0"
-                Foreground="#637182"
+                Foreground="{DynamicResource DividerLineBrush}"
                 Margin="5,0,0,0"
                 IsVisible="{Binding #toggleMiniSidebar.IsChecked, Converter={StaticResource inverseBoolConverter}}"
                 Command="{Binding Path=MarkAllAsRead}"
                 CommandParameter="{Binding Path=.}">
-            <DrawingPresenter Width="15" Height="15" Drawing="{DynamicResource Entypo+.Unread}" />
+          <iconPack:IconControl Width="15" Height="15" Kind="PackIconEntypoKind.Unread" />
         </Button>
 
         <Border Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" BorderBrush="{DynamicResource DividerLineBrush}" BorderThickness="0,0,0,1" Margin="0,0,15,0"/>
@@ -124,7 +126,6 @@
           <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
               <StackPanel>
-                
                 <!--<i:Interaction.Behaviors>
                   <ic:FluidMoveBehavior AppliesTo="Children" Duration="0:0:00.5" Tag="DataContext">
                     <ic:FluidMoveBehavior.EaseX>
