--- a/GroupMeClientAvalonia/Views/Controls/Attachments/VideoAttachmentControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/Attachments/VideoAttachmentControl.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+             xmlns:iconPack="clr-namespace:MicroCubeAvalonia.IconPack;assembly=MicroCubeAvalonia"
              mc:Ignorable="d" d:DesignHeight="200" d:DesignWidth="200"
              Background="White"
              FontFamily="Segoe UI">
@@ -24,11 +25,11 @@
            HorizontalAlignment="Stretch"
            Source="{Binding RenderedImage}" />
 
-    <DrawingPresenter Drawing="{DynamicResource MaterialDesign.PlayCircleFilled}"
-                      Width="70" Height="70"
-                      VerticalAlignment="Center"
-                      HorizontalAlignment="Center"
-                      Margin="0"
-                      Opacity="0.8"/>
+    <iconPack:IconControl Kind="PackIconMaterialKind.PlayCircle"
+                          Width="70" Height="70"
+                          VerticalAlignment="Center"
+                          HorizontalAlignment="Center"
+                          Margin="0"
+                          Opacity="0.8" />
   </Grid>
 </UserControl>
