--- a/GroupMeClientAvalonia/Views/Controls/ViewImageControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/ViewImageControl.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:converters="clr-namespace:GroupMeClientAvalonia.Converters"
              xmlns:microcube="clr-namespace:MicroCubeAvalonia.Controls;assembly=MicroCubeAvalonia"
+             xmlns:iconPack="clr-namespace:MicroCubeAvalonia.IconPack;assembly=MicroCubeAvalonia"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="300"
              ClipToBounds="False"
              FontFamily="Segoe UI"
@@ -28,7 +29,7 @@
          MaxWidth="{Binding $parent[6].Bounds.Width}"
          MaxHeight="{Binding $parent[6].Bounds.Height}"
          Stretch="Uniform"
-         Source="{Binding ImageStream}"
+         Source="{Binding Image}"
          HorizontalAlignment="Center">
       </Image>
     </Border>
@@ -39,12 +40,13 @@
             VerticalAlignment="Top"
             Margin="0,-30,0,0"
             Foreground="White"
+            Background="Transparent"
             BorderThickness="0"
             Command="{Binding Path=SaveImage}"
             IsVisible="{Binding IsLoading, Converter={StaticResource inverseBoolConverter}}">
-
-      <DrawingPresenter Width="15" Height="15" 
-                        Drawing="{DynamicResource Entypo+.Save}" />
+      <iconPack:IconControl Width="15" Height="15"
+                            Background="Transparent"
+                            Kind="PackIconEntypoKind.Save" />
     </Button>
 
     <Button Width="30"
@@ -53,16 +55,13 @@
             VerticalAlignment="Top"
             Margin="30,-30,0,0"
             Foreground="White"
+            Background="Transparent"
             BorderThickness="0"
             Command="{Binding Path=CopyImage}"
             IsVisible="{Binding IsLoading, Converter={StaticResource inverseBoolConverter}}">
-
-        <Path Stretch="Uniform" Data="M15.173,2H4C2.899,2,2,2.9,2,4v12c0,1.1,0.899,2,2,2h12c1.101,0,2-0.9,2-2V5.127L15.173,2z M14,8c0,0.549-0.45,1-1,1H7  C6.45,9,6,8.549,6,8V3h8V8z M13,4h-2v4h2V4z" 
-              Width="15" Height="15"
-              Fill="Blue"
-              />
-      <!--<DrawingPresenter Width="15" Height="15"
-                      Drawing="{DynamicResource FontAwesome.CopySolid}" />-->
+      <iconPack:IconControl Width="15" Height="15"
+                            Background="Transparent"
+                            Kind="PackIconFontAwesomeKind.CopySolid" />
     </Button>
   </Grid>
 </UserControl>
