--- a/GroupMeClientAvalonia/Views/Controls/AvatarControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/AvatarControl.xaml
@@ -4,27 +4,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:converters="clr-namespace:GroupMeClientAvalonia.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="300">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+      <Grid.Resources>
+        <converters:InverseBoolConverter x:Key="inverseBoolConverter" />
+      </Grid.Resources>
 
-        <Image Grid.Column="0" Grid.Row="0" 
-               Width="NaN" Height="NaN"
-               Source="{Binding AvatarSquare}"
-               RenderOptions.BitmapInterpolationMode="MediumQuality" />
-        
-        <Ellipse Grid.Column="0" Grid.Row="0" Width="NaN" Height="NaN">
-            <Ellipse.Fill>
-                <ImageBrush Source="{Binding AvatarRound}"
-                            RenderOptions.BitmapInterpolationMode="MediumQuality"/>
-            </Ellipse.Fill>
-        </Ellipse>
+      <Ellipse IsVisible="{Binding IsRounded}">
+        <Ellipse.Fill>
+          <ImageBrush
+                    Source="{Binding Avatar}"
+                    RenderOptions.BitmapInterpolationMode="MediumQuality" />
+        </Ellipse.Fill>
+      </Ellipse>
+
+      <Rectangle IsVisible="{Binding IsRounded, Converter={StaticResource inverseBoolConverter}}">
+        <Rectangle.Fill>
+          <ImageBrush 
+                    Source="{Binding Avatar}"
+                    RenderOptions.BitmapInterpolationMode="MediumQuality" />
+        </Rectangle.Fill>
+      </Rectangle>
     </Grid>
 </UserControl>
