Added Hamburger Menu and placeholder tabs

--- a/GroupMeClientAvalonia/Views/MainWindow.xaml
+++ b/GroupMeClientAvalonia/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:GroupMeClientAvalonuia.Views.Controls"
-        xmlns:iconPack="clr-namespace:MicroCubeAvalonia.IconPack;assembly=MicroCubeAvalonia"
+        xmlns:microcube="clr-namespace:MicroCubeAvalonia.Controls;assembly=MicroCubeAvalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="GroupMeClientAvalonia.Views.MainWindow"
         FontFamily="Segoe UI"
@@ -16,8 +16,13 @@
     </Design.DataContext>
 
   <Grid>
-    <UserControl Content="{Binding ChatsViewModel}" BorderBrush="Red" BorderThickness="3"/>
-
+    <microcube:HamburgerMenu Items="{Binding MenuItems}" 
+                             OptionItems="{Binding MenuOptionItems}"
+                             SelectedItem="{Binding SelectedItem}"
+                             SidebarBrush="#1873BA" 
+                             SidebarForeground="White"
+                             HoverHighlightBrush="#1584C7"/>
+    
     <ContentControl Content="{Binding PopupManager}" />
 
     <!--In-App Toast Area-->
