--- a/MicroCubeAvalonia/DefaultTheme.xaml
+++ b/MicroCubeAvalonia/DefaultTheme.xaml
@@ -2,5 +2,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <StyleInclude Source="avares://MicroCubeAvalonia/Controls/ProgressRing.xaml" />
+  <StyleInclude Source="avares://MicroCubeAvalonia/Controls/HamburgerMenuItem.xaml" />
+  <StyleInclude Source="avares://MicroCubeAvalonia/Controls/HamburgerMenu.xaml" />
+  
   <StyleInclude Source="avares://MicroCubeAvalonia/IconPack/IconControl.xaml" />
 </Styles>
