--- a/GroupMeClientAvalonia/App.xaml
+++ b/GroupMeClientAvalonia/App.xaml
@@ -14,7 +14,8 @@
     <Application.Styles>
       <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
       <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
-      
+      <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
+
       <StyleInclude Source="avares://GroupMeClientAvalonia/HamburgerMenu.xaml"/>
       <StyleInclude Source="avares://MicroCubeAvalonia/DefaultTheme.xaml"/>
 
