--- a/GroupMeClientAvalonia/GroupMeLight.xaml
+++ b/GroupMeClientAvalonia/GroupMeLight.xaml
@@ -3,6 +3,8 @@
        xmlns:sys="clr-namespace:System;assembly=netstandard">
 
   <Style.Resources>
+    <FontFamily x:Key="GroupMeFont">Segoe UI</FontFamily>
+    
     <Color x:Key="LoadingSpinnerDarkColor">#CC119EDA</Color>
     <Color x:Key="MenuButtonLightColor">#F7F7F7</Color>
     <Color x:Key="MessageBackdropColor">#F7F7F7</Color>
