--- a/GroupMeClientAvalonia/Views/Controls/Attachments/GenericLinkAttachmentControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/Attachments/GenericLinkAttachmentControl.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-             FontFamily="Segoe UI"
+             FontFamily="{DynamicResource GroupMeFont}"
              Background="White"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450">
 
