--- a/GroupMeClientAvalonia/Views/Controls/Attachments/VideoAttachmentControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/Attachments/VideoAttachmentControl.xaml
@@ -8,7 +8,7 @@
              xmlns:iconPack="clr-namespace:MicroCubeAvalonia.IconPack;assembly=MicroCubeAvalonia"
              mc:Ignorable="d" d:DesignHeight="200" d:DesignWidth="200"
              Background="White"
-             FontFamily="Segoe UI">
+             FontFamily="{DynamicResource GroupMeFont}">
 
   <Grid Cursor="Hand">
     <i:Interaction.Behaviors>
