--- a/GroupMeClientAvalonia/Views/Controls/SendImageControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/SendImageControl.xaml
@@ -11,7 +11,7 @@
              xmlns:controls="clr-namespace:GroupMeClientAvalonia.Views.Controls"
              mc:Ignorable="d" d:DesignHeight="200" d:DesignWidth="200"
              Background="Black"
-             FontFamily="Segoe UI">
+             FontFamily="{DynamicResource GroupMeFont}">
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*"/>
