--- a/GroupMeClientAvalonia/Views/LoginView.xaml
+++ b/GroupMeClientAvalonia/Views/LoginView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             FontFamily="{DynamicResource GroupMeFont}"
              mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="400">
   <Grid ColumnDefinitions="*"
         RowDefinitions="Auto, *">
@@ -15,7 +16,6 @@
     </Grid.Background>
 
     <TextBlock Grid.Row="0"
-               FontFamily="Segoe UI"
                FontSize="18"
                FontWeight="SemiBold"
                HorizontalAlignment="Center"
