--- a/GroupMeClientAvalonia/Views/Controls/ViewImageControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/ViewImageControl.xaml
@@ -4,8 +4,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:converters="clr-namespace:GroupMeClientAvalonia.Converters"
+             xmlns:extensions="clr-namespace:GroupMeClientAvalonia.Extensions"
              xmlns:microcube="clr-namespace:MicroCubeAvalonia.Controls;assembly=MicroCubeAvalonia"
              xmlns:iconPack="clr-namespace:MicroCubeAvalonia.IconPack;assembly=MicroCubeAvalonia"
+             xmlns:paz="clr-namespace:Avalonia.Controls.PanAndZoom;assembly=Avalonia.Controls.PanAndZoom"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="300"
              ClipToBounds="False"
              FontFamily="{DynamicResource GroupMeFont}"
@@ -22,8 +24,7 @@
                             Background="Transparent"
                             Foreground="{DynamicResource LoadingSpinnerDarkBrush}"/>
 
-    <!--<extensions:ZoomBorder x:Name="border" ClipToBounds="False" IsManipulationEnabled="true">-->
-    <Border>
+    <extensions:ZoomBorder >
       <!--gif:AnimationBehavior.SourceStream="{Binding ImageStream}"-->
       <Image
          MaxWidth="{Binding $parent[6].Bounds.Width}"
@@ -32,7 +33,7 @@
          Source="{Binding Image}"
          HorizontalAlignment="Center">
       </Image>
-    </Border>
+    </extensions:ZoomBorder>
 
     <Button Width="30"
             Height="30"
